ci: 更新 SonarQube 分析配置和部署文件
- 更新 SonarQube 项目 key- 添加代码排除规则
- 更新 Jenkinsfile 以使用管道语法
- 在部署文件中添加资源限制
- 优化 kustomization 文件格式

--- a/manifest/deploy/kustomize/base/deployment.yaml
+++ b/manifest/deploy/kustomize/base/deployment.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -17,5 +18,13 @@ spec:
       containers:
         - name : main
           image: template-single
+          resources:
+            requests:
+              ephemeral-storage: "2Gi"
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              ephemeral-storage: "4Gi"
+              cpu: "200m"
+              memory: "256Mi"
           imagePullPolicy: Always
-
