--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,2 @@
-sonar.projectKey=xiao-monitor_monitor-dashboard_b80cc99b-4c41-4ebd-8483-1c195ec6f20a
+sonar.projectKey=xiao-monitor_monitor-dashboard_d6e970d9-20bf-45b4-8737-26138f425339
+sonar.exclusions=/hack/**
