ci(new): 更新 Jenkinsfile 并添加构建配置
- 新增多个构建阶段，包括基于分支执行操作、签出代码、代码分析、项目打包、收集构建产物和发布到 GitHub Release
- 更新 hack/config.yaml，添加新的构建配置信息
- 优化 Jenkinsfile 结构，增加环境变量设置和错误处理
- 实现自动获取版本号、生成 CHANGELOG 并发布到 GitHub Release 的功能

--- a/hack/config.yaml
+++ b/hack/config.yaml
@@ -11,3 +11,13 @@ gfcli:
     build: "-a amd64 -s linux -p temp -ew"
     tagPrefixes:
       - my.image.pub/my-app
+
+  build:
+    name:     "monitor-dashboard"
+    arch:     "all"
+    system:   "linux,darwin,windows,freebsd,openbsd,netbsd"
+    mod:      "none"
+    packSrc:  "resource,manifest"
+    version:  "v1.0.0"
+    path:     "build"
+    extra:    ""
